[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/scripts/Portal.gd" type="Script" id=1]
[ext_resource path="res://assets/sprites/gameSprites/GarageScene/Portal.png" type="Texture" id=2]
[ext_resource path="res://assets/sprites/controlKeys/iButton.png" type="Texture" id=3]

[sub_resource type="CircleShape2D" id=1]
radius = 733.3

[node name="Portal" type="Sprite"]
position = Vector2( 1, 0 )
scale = Vector2( 0.1, 0.1 )
texture = ExtResource( 2 )
script = ExtResource( 1 )

[node name="Area2D" type="Area2D" parent="."]
collision_layer = 0

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
position = Vector2( -40, 20 )
shape = SubResource( 1 )

[node name="exlamationPoint" type="Sprite" parent="."]
position = Vector2( -50, -1310 )
scale = Vector2( 25, 25 )
texture = ExtResource( 3 )

[connection signal="body_entered" from="Area2D" to="." method="_on_Area2D_body_entered"]
[connection signal="body_exited" from="Area2D" to="." method="_on_Area2D_body_exited"]
